--- a/docs/data/manifest.json
+++ b/docs/data/manifest.json
@@ -1,5 +1,5 @@
 {
-  "generated_at": "21/01/2026 16:20",
+  "generated_at": "22/01/2026 10:44",
   "source": "TABELAO_v1.0.xlsx",
   "months": [
     "2026-01"
@@ -8,7 +8,7 @@
     "imoveis": {
       "2026-01": [
         {
-          "file": "imoveis/2026-01_part1.json",
+          "file": "2026-01_part1.json",
           "rows": 31
         }
       ]
@@ -16,7 +16,7 @@
     "carbuy": {
       "2026-01": [
         {
-          "file": "carbuy/2026-01_part1.json",
+          "file": "2026-01_part1.json",
           "rows": 31
         }
       ]
@@ -24,7 +24,7 @@
     "veiculos": {
       "2026-01": [
         {
-          "file": "veiculos/2026-01_part1.json",
+          "file": "2026-01_part1.json",
           "rows": 31
         }
       ]
