Dashboard BU - geração JSON + site

--- a/docs/data/manifest.json
+++ b/docs/data/manifest.json
@@ -1,6 +1,6 @@
 {
-  "generated_at": "22/01/2026 13:51",
-  "source": "TABELAO_v1.0.xlsx",
+  "generated_at": "06/02/2026 10:38",
+  "source": "TABELÃO_v1.0.xlsx",
   "months": [
     "2026-01"
   ],
